[package]
name = "polars_hash"
version = "0.5.5"
edition = "2024"
rust-version = "1.91.0"

[profile.release]
codegen-units = 1
lto = "thin"

[lib]
name = "polars_hash"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.51.0", features = ["dtype-array", "dtype-struct", "serde"] }
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py310", "serde"] }
pyo3-polars = { version = "0.24.0", features = ["derive", "dtype-struct"] }
serde = { version = "1.0.228", features = ["derive"] }
wyhash = { version = "0.6.0" }
geohash = { version = "0.13.1" }
sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
blake3 = { version = "1.5.4" }
md5 = { version = "0.8.0" }
h3o = { version = "0.9.3" }
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh64"] }
mur3 = { version = "0.1.0" }
hex = {version = "0.4.3"}
